--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,14 @@
           %header
             .well
               Enotes by @ESH
-              \#{link_to 'Sign Up', sign_up_path}
+              .user-links
+                - if current_user.present?
+                  Signed in as @#{current_user.display_name}.
+                  = link_to 'Logout', logout_path, method: :delete
+                - else
+                  = link_to 'Sign Up', sign_up_path
+                  or
+                  = link_to 'Login', login_path
         .container
           .row
             .col-xs-4
